# simulator

./: .editorconfig  .gitignore  .readthedocs.yaml  README.md  example_sim.py  example_sim_mpi.sh  example_sim_plot.py  mkdocs.yaml  pyproject.toml
.github/actions/spec0_oldest/: action.yaml  spec0_oldest.py
.github/workflows/: code_quality.yaml  publish.yaml  unit_tests.yaml
docs/: index.md
docs/concepts/: result_format.md
docs/examples/: simple_points.md
docs/getting_started/: install.md
docs/included_plugins/: index.md
docs/plugins/: index.md  specifying.md
docs/plugins/controller/: helpers.md  interface.md  overview.md  simple_points.md
docs/plugins/distortion/: anslie_mccolm.md  doppler.md  geometric_spreading.md  interface.md  overview.md  rectangular_beampattern.md
docs/plugins/environment/: interface.md  invariant.md  overview.md
docs/plugins/ping_times/: constant_distance.md  constant_interval.md  interface.md  overview.md
docs/plugins/result_converter/: interface.md  matlab.md  numpy.md  overview.md
docs/plugins/scattering_model/: constant.md  interface.md  lambertian.md  overview.md
docs/plugins/signal/: hfm_chirp.md  interface.md  lfm_chirp.md  overview.md
docs/plugins/trajectory/: circular.md  interface.md  linear.md  overview.md
docs/release_notes/: v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md  v0.8.1.md  v0.9.0.md
docs/static/: mathjax.js
examples/: README.md
examples/cli/simple_points/: README.md  plot_results.py  simple_points.toml
examples/scripts/simple_points/: README.md  plot_results.py  run_with_mpi.sh  simulate.py
extra/typing_stubs/: dask_mpi.pyi  quaternionic.pyi
extra/typing_stubs/scipy/io/: __init__.pyi
src/openstb/simulator/: __init__.py  __main__.py  abc.py  cluster.py  config_loader.py  environment.py  plugin.py  random.py  result_converter.py  transducer.py  travel_time.py  types.py  util.py
src/openstb/simulator/cli/: __init__.py  plugin.py  run.py  seed.py
src/openstb/simulator/cluster/: dask_local.py  dask_mpi.py
src/openstb/simulator/config_loader/: toml.py
src/openstb/simulator/controller/: base.py  simple_points.py
src/openstb/simulator/distortion/: beampattern.py  doppler.py  environmental.py
src/openstb/simulator/environment/: invariant.py
src/openstb/simulator/plugin/: abc.py  loader.py  util.py
src/openstb/simulator/result_converter/: __init__.py  matlab.py  numpy.py
src/openstb/simulator/scale_factor/: beampattern.py  environmental.py
src/openstb/simulator/scattering/: constant.py  lambertian.py
src/openstb/simulator/sim_type/: points.py
src/openstb/simulator/simulation/: points.py
src/openstb/simulator/system/: __init__.py  beampattern.py  ping_times.py  signal.py  signal_windows.py  trajectory.py  transducer.py
src/openstb/simulator/travel_time/: iterative.py  stop_and_hop.py
src/openstb/simulator/utils/: reduction.py
tests/: conftest.py  test_cluster_local.py  test_cluster_mpi.py  test_environment.py  test_plugin.py  test_random.py  test_travel_time.py  test_util.py
tests/cluster/: test_dask_local.py  test_dask_mpi.py
tests/controller/: test_base.py  test_simple_points.py
tests/distortion/: test_beampattern.py  test_environmental.py
tests/docs/plugins/: test_controller_plugin_docs.py  test_distortion_plugin_docs.py  test_environment_plugin_docs.py  test_ping_times_plugin_docs.py  test_result_converter_plugin_docs.py  test_scattering_model_plugin_docs.py  test_signal_plugin_docs.py  test_specifying.py  test_trajectory_plugin_docs.py
tests/environment/: test_invariant.py
tests/plugin/: test_loader.py
tests/plugin/default_methods/: test_environment_defaults.py
tests/plugin/modules/: README.md
tests/plugin/modules/registered/: multi_a.py  multi_b.py  plugin_a.py
tests/scale_factor/: test_beampattern.py  test_environmental.py
tests/scattering/: test_constant.py  test_lambertian.py
tests/system/: test_beampattern.py  test_ping_times.py  test_signal.py  test_signal_windows.py  test_trajectory.py
tests/test_plugin_modules/: README.md
tests/test_plugin_modules/installed/: plugin_b.py
tests/test_plugin_modules/local/: plugin_double.py  plugin_triple.py  plugin_triple.x
tests/travel_time/: test_iterative.py  test_stop_and_hop.py
tests/utils/: test_quaternion.py  test_reduction.py
util/typing_stubs/: dask_mpi.pyi  quaternionic.pyi
util/typing_stubs/scipy/interpolate/: __init__.pyi
