# SPDX-FileCopyrightText: openSTB contributors
# SPDX-License-Identifier: BSD-2-Clause-Patent

[build-system]
requires = ["hatchling", "openstb-i18n"]
build-backend = "hatchling.build"

[project]
name = "openstb-simulator"
description = "SONAR simulator"
version = "0.0.1"

requires-python = ">=3.11"
dependencies = [
  "openstb-i18n",
]


#
# Register included plugins at the appropriate entry points.
#

[project.entry-points."openstb.simulator.beampattern"]
rectangular = "openstb.simulator.system.beampattern:Rectangular"

[project.entry-points."openstb.simulator.cluster"]
local = "openstb.simulator.cluster:LocalCluster"
mpi = "openstb.simulator.cluster:MPICluster"

[project.entry-points."openstb.simulator.ping_times"]
constant_distance = "openstb.simulator.system.ping_times:ConstantDistance"
constant_interval = "openstb.simulator.system.ping_times:ConstantInterval"

[project.entry-points."openstb.simulator.signal"]
lfm_chirp = "openstb.simulator.system.signal:LFMChirp"

[project.entry-points."openstb.simulator.signal_window"]
blackman = "openstb.simulator.system.signal_windows:BlackmanWindow"
blackman_harris = "openstb.simulator.system.signal_windows:BlackmanHarrisWindow"
generalised_cosine = "openstb.simulator.system.signal_windows:GeneralisedCosineWindow"
hamming = "openstb.simulator.system.signal_windows:HammingWindow"
hann = "openstb.simulator.system.signal_windows:HannWindow"
nuttall = "openstb.simulator.system.signal_windows:NuttallWindow"
tukey = "openstb.simulator.system.signal_windows:TukeyWindow"

[project.entry-points."openstb.simulator.trajectory"]
linear = "openstb.simulator.system.trajectory:Linear"

[project.entry-points."openstb.simulator.travel_time"]
stop_and_hop = "openstb.simulator.travel_time:StopAndHop"


#
# Build system configuration.
#


[tool.hatch.build.targets.sdist]
exclude = [
  "*.mo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openstb"]
exclude = [
  ".gitignore",
]

[tool.hatch.build.targets.wheel.hooks.openstb-i18n]
domain = "openstb.simulator"


#
# Test configuration.
#

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
  "--import-mode=importlib",
  "--cov=openstb.simulator", "--cov-report=html:tests/coverage",
]
markers = [
  "cluster: tests which involve starting a cluster (exclude with -m 'not cluster')",
]

[tool.coverage.run]
branch = true
omit = [
  "*/openstb/i18n/*",
  "*/test_plugin_modules/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma:no cover",
  "^\\s*pass\\s*$",
  "^\\s*@overload",
]


#
# Configuration of linting tools.
#


[tool.flake8]
# You need to have the flake8-pyproject plugin installed as flake8 does not
# natively support pyproject.toml yet.
max-line-length = 88
ignore = ["E203", "E704", "W503"]
per-file-ignores = [
  "__init__.py:F401",
]

[tool.isort]
profile = "black"
src_paths = ["src"]
lines_after_imports = 2
atomic = true
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["openstb.i18n"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/util/typing_stubs"
plugins = ["numpy.typing.mypy_plugin"]
